--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,37 +1,103 @@
 {% extends 'base.html' %}
-{% block title %}Edit - RevisePDF{% endblock %}
+{% block title %}Edit PDF Files - RevisePDF{% endblock %}
 {% block content %}
-    <h1>Edit Your PDF</h1>
-    <p>Choose from the tools below to edit and customise your PDF files.</p>
+    <h1 class="display-5 fw-bold">Edit PDF Files</h1>
+    <p class="lead">Modify your PDF documents with our powerful editing tools.</p>
 
-    <div class="row mt-4">
-        <div class="col-md-4">
-            <div class="card" style="height: 100%;">
-                <div class="card-body text-center d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Add Page Numbers</h5>
-                    <p class="card-text">Insert page numbers into your PDF documents.</p>
-                    <a href="/pages/edit/page_numbers" class="btn btn-primary mt-auto">Add Numbers</a>
+    <div class="tools-container my-4">
+        <div class="tools-horizontal-scroll">
+            <div class="d-flex flex-nowrap overflow-auto pb-3">
+                <!-- Edit Text Card -->
+                <div class="card tool-card me-3">
+                    <div class="card-body">
+                        <div class="tool-icon bg-light rounded p-3 mb-3 text-center">
+                            <svg width="40" height="40" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="tool-svg">
+                                <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3z" fill="#238287"/>
+                                <path d="M13.5 6.207L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5z" fill="#238287"/>
+                                <path d="M6.032 13.5a.5.5 0 0 1-.032-.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z" fill="#238287"/>
+                            </svg>
+                        </div>
+                        <h5 class="card-title">Edit Text</h5>
+                        <p class="card-text">Change text content directly in your PDF documents.</p>
+                        <a href="{{ url_for('edit_text') }}" class="btn btn-primary mt-auto">Edit Text</a>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card" style="height: 100%;">
-                <div class="card-body text-center d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Add Watermark</h5>
-                    <p class="card-text">Overlay a watermark onto your PDF pages.</p>
-                    <a href="/pages/edit/add_watermark" class="btn btn-primary mt-auto">Add Watermark</a>
+                
+                <!-- Add Annotations Card -->
+                <div class="card tool-card me-3">
+                    <div class="card-body">
+                        <div class="tool-icon bg-light rounded p-3 mb-3 text-center">
+                            <svg width="40" height="40" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="tool-svg">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" fill="#238287"/>
+                                <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" fill="#238287"/>
+                            </svg>
+                        </div>
+                        <h5 class="card-title">Add Annotations</h5>
+                        <p class="card-text">Add comments, notes, and highlights to your PDF files.</p>
+                        <a href="{{ url_for('annotate') }}" class="btn btn-primary mt-auto">Annotate</a>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card" style="height: 100%;">
-                <div class="card-body text-center d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Edit Content</h5>
-                    <p class="card-text">Modify text and images in your PDF documents.</p>
-                    <a href="/pages/edit/edit_content" class="btn btn-primary mt-auto">Edit Content</a>
+                
+                <!-- Merge PDFs Card -->
+                <div class="card tool-card me-3">
+                    <div class="card-body">
+                        <div class="tool-icon bg-light rounded p-3 mb-3 text-center">
+                            <svg width="40" height="40" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="tool-svg">
+                                <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2V2zm12 2H6a2 2 0 0 0-2 2v8h2v-2a2 2 0 0 1 2-2h8v-2a2 2 0 0 0-2-2h-2z" fill="#238287"/>
+                            </svg>
+                        </div>
+                        <h5 class="card-title">Merge PDFs</h5>
+                        <p class="card-text">Combine multiple PDF files into a single document.</p>
+                        <a href="{{ url_for('merge') }}" class="btn btn-primary mt-auto">Merge</a>
+                    </div>
+                </div>
+                
+                <!-- Split PDF Card -->
+                <div class="card tool-card me-3">
+                    <div class="card-body">
+                        <div class="tool-icon bg-light rounded p-3 mb-3 text-center">
+                            <svg width="40" height="40" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="tool-svg">
+                                <path d="M14 5a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v2zm0 8a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v2z" fill="#238287"/>
+                                <path d="M8.5 6l.707-.707L7.354 3.439A.5.5 0 0 0 6.646 3.439L4.793 5.293l.707.707L7 4.5V11.5l-1.5-1.5-.707.707 1.854 1.853a.5.5 0 0 0 .707 0l1.853-1.853-.707-.707L8 11.5V4.5l1.5 1.5z" fill="#238287"/>
+                            </svg>
+                        </div>
+                        <h5 class="card-title">Split PDF</h5>
+                        <p class="card-text">Divide a PDF into multiple separate documents.</p>
+                        <a href="{{ url_for('split') }}" class="btn btn-primary mt-auto">Split</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Why Choose RevisePDF Section -->
+    <div class="why-choose-section py-5">
+        <h2 class="text-center mb-4">Why Use Our Editing Tools?</h2>
+        <div class="row g-4">
+            <div class="col-md-4">
+                <div class="card h-100 border-primary">
+                    <div class="card-body text-center">
+                        <h3 class="card-title h5">Precise Editing</h3>
+                        <p class="card-text">Make accurate changes to text, images, and layout with our powerful editing tools.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card h-100 border-primary">
+                    <div class="card-body text-center">
+                        <h3 class="card-title h5">No Quality Loss</h3>
+                        <p class="card-text">Edit your PDFs without degrading the quality of the original document.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card h-100 border-primary">
+                    <div class="card-body text-center">
+                        <h3 class="card-title h5">Easy to Use</h3>
+                        <p class="card-text">Our intuitive interface makes editing PDFs simple for everyone, no technical skills required.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
