--- a/templates/organise.html
+++ b/templates/organise.html
@@ -1,64 +1,102 @@
 {% extends 'base.html' %}
-{% block title %}Organise - RevisePDF{% endblock %}
+{% block title %}Organise PDF Files - RevisePDF{% endblock %}
 {% block content %}
-    <h1>Organise Your PDF</h1>
-    <p>Choose from the tools below to organise and manage your PDF files.</p>
+    <h1 class="display-5 fw-bold">Organise Your PDF Files</h1>
+    <p class="lead">Arrange and manage your PDF documents with our powerful organisation tools.</p>
 
-    <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
-        <div class="col-md-4">
-            <div class="card" style="height: 100%;">
-                <div class="card-body text-center d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Merge PDFs</h5>
-                    <p class="card-text">Combine multiple PDF files into one document.</p>
-                    <a href="/pages/organise/merge" class="btn btn-primary mt-auto">Merge</a>
+    <div class="tools-container my-4">
+        <div class="tools-horizontal-scroll">
+            <div class="d-flex flex-nowrap overflow-auto pb-3">
+                <!-- Reorder Pages Card -->
+                <div class="card tool-card me-3">
+                    <div class="card-body">
+                        <div class="tool-icon bg-light rounded p-3 mb-3 text-center">
+                            <svg width="40" height="40" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="tool-svg">
+                                <path d="M3.5 3.5a.5.5 0 0 0-1 0v8.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 1.999.007.007a.497.497 0 0 0 .7-.006l2-2a.5.5 0 0 0-.707-.708L3.5 12.293V3.5zm4 .5a.5.5 0 0 1 0-1h1a.5.5 0 0 1 0 1h-1zm0 3a.5.5 0 0 1 0-1h3a.5.5 0 0 1 0 1h-3zm0 3a.5.5 0 0 1 0-1h5a.5.5 0 0 1 0 1h-5zM7 12.5a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 0-1h-7a.5.5 0 0 0-.5.5z" fill="#238287"/>
+                            </svg>
+                        </div>
+                        <h5 class="card-title">Reorder Pages</h5>
+                        <p class="card-text">Change the order of pages in your PDF documents.</p>
+                        <a href="{{ url_for('reorder') }}" class="btn btn-primary mt-auto">Reorder</a>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card" style="height: 100%;">
-                <div class="card-body text-center d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Split PDF</h5>
-                    <p class="card-text">Separate a PDF into multiple smaller files.</p>
-                    <a href="/pages/organise/split" class="btn btn-primary mt-auto">Split</a>
+                
+                <!-- Delete Pages Card -->
+                <div class="card tool-card me-3">
+                    <div class="card-body">
+                        <div class="tool-icon bg-light rounded p-3 mb-3 text-center">
+                            <svg width="40" height="40" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="tool-svg">
+                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" fill="#238287"/>
+                                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" fill="#238287"/>
+                            </svg>
+                        </div>
+                        <h5 class="card-title">Delete Pages</h5>
+                        <p class="card-text">Remove specific pages from your PDF documents.</p>
+                        <a href="{{ url_for('delete_pages') }}" class="btn btn-primary mt-auto">Delete</a>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card" style="height: 100%;">
-                <div class="card-body text-center d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Remove Pages</h5>
-                    <p class="card-text">Delete specific pages from your PDF document.</p>
-                    <a href="/pages/organise/remove" class="btn btn-primary mt-auto">Remove Pages</a>
+                
+                <!-- Rotate Pages Card -->
+                <div class="card tool-card me-3">
+                    <div class="card-body">
+                        <div class="tool-icon bg-light rounded p-3 mb-3 text-center">
+                            <svg width="40" height="40" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="tool-svg">
+                                <path d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z" fill="#238287"/>
+                                <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z" fill="#238287"/>
+                            </svg>
+                        </div>
+                        <h5 class="card-title">Rotate Pages</h5>
+                        <p class="card-text">Rotate pages in your PDF to the correct orientation.</p>
+                        <a href="{{ url_for('rotate') }}" class="btn btn-primary mt-auto">Rotate</a>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card" style="height: 100%;">
-                <div class="card-body text-center d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Extract Pages</h5>
-                    <p class="card-text">Extract specific pages into a new PDF file.</p>
-                    <a href="/pages/organise/extract" class="btn btn-primary mt-auto">Extract Pages</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card" style="height: 100%;">
-                <div class="card-body text-center d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Sort Pages</h5>
-                    <p class="card-text">Reorder pages within your PDF document.</p>
-                    <a href="/pages/organise/sort" class="btn btn-primary mt-auto">Sort Pages</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card" style="height: 100%;">
-                <div class="card-body text-center d-flex flex-column justify-content-between">
-                    <h5 class="card-title">Rotate Pages</h5>
-                    <p class="card-text">Rotate specific pages within your PDF document.</p>
-                    <a href="/pages/organise/rotate" class="btn btn-primary mt-auto">Rotate Pages</a>
+                
+                <!-- Extract Pages Card -->
+                <div class="card tool-card me-3">
+                    <div class="card-body">
+                        <div class="tool-icon bg-light rounded p-3 mb-3 text-center">
+                            <svg width="40" height="40" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" class="tool-svg">
+                                <path d="M6 9.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zM3 6.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM13 12.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5z" fill="#238287"/>
+                                <path d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z" fill="#238287"/>
+                            </svg>
+                        </div>
+                        <h5 class="card-title">Extract Pages</h5>
+                        <p class="card-text">Extract specific pages as a new PDF document.</p>
+                        <a href="{{ url_for('extract') }}" class="btn btn-primary mt-auto">Extract</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Why Choose RevisePDF Section -->
+    <div class="why-choose-section py-5">
+        <h2 class="text-center mb-4">Why Use Our Organisation Tools?</h2>
+        <div class="row g-4">
+            <div class="col-md-4">
+                <div class="card h-100 border-primary">
+                    <div class="card-body text-center">
+                        <h3 class="card-title h5">Intuitive Interface</h3>
+                        <p class="card-text">Easily rearrange, delete, or extract pages with our user-friendly drag-and-drop interface.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card h-100 border-primary">
+                    <div class="card-body text-center">
+                        <h3 class="card-title h5">Real-Time Preview</h3>
+                        <p class="card-text">See changes instantly with our preview feature before finalizing your document.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card h-100 border-primary">
+                    <div class="card-body text-center">
+                        <h3 class="card-title h5">Batch Processing</h3>
+                        <p class="card-text">Apply organizational changes to multiple documents at once to save time.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
