--- a/templates/base.html
+++ b/templates/base.html
@@ -8,17 +8,17 @@
         <meta name="keywords" content="edit PDF, PDF editor, online PDF tools, merge PDFs, compress PDFs, OCR PDFs">
         <meta name="author" content="RevisePDF">
         <link rel="canonical" href="https://www.revisepdf.com/">
-        <!-- link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/f-white-back-icon.ico') }}" -->
-        <!--link rel="icon" type="image/png" href="{{ url_for('static', filename='img/f-white-back-icon.png') }}" -->
-        <link rel="shortcut icon" href="{{ url_for('static', filename='img/f-white-back-icon.ico') }}">
+        <!-- Removed commented out and redundant links -->
+        <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
+        <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/favicon.svg') }}" />
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon-96x96.png') }}" sizes="96x96" />
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='img/apple-touch-icon.png') }}" />
+        <meta name="apple-mobile-web-app-title" content="RevisePDF" />
+        <link rel="manifest" href="{{ url_for('static', filename='img/site.webmanifest') }}" />
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-        <link rel="icon" type="image/png" href="/static/img/favicon-96x96.png" sizes="96x96" />
-        <link rel="icon" type="image/svg+xml" href="/static/img/favicon.svg" />
-        <link rel="shortcut icon" href="/static/img/favicon.ico" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon.png" />
-        <meta name="apple-mobile-web-app-title" content="RevisePDF" />
-        <link rel="manifest" href="/static/img/site.webmanifest" />
+        <!-- Removed duplicate Bootstrap and Font Awesome links from here -->
         <style>
             :root {
                 --primary-color: #238287;
@@ -304,10 +304,10 @@
                                     </svg>
                                     JPG to PDF
                                 </a>
-                                <a href="{{ url_for('word_to_pdf') }}"><img src="{{ url_for('static', filename='static\img\Compress.svg') }}" alt="Icon">Word to PDF
+                                <a href="{{ url_for('word_to_pdf') }}"><img src="{{ url_for('static', filename='img/Compress.svg') }}" alt="Icon">Word to PDF
                                 </a>
-                                <a href="{{ url_for('ppt_to_pdf') }}"><img src="{{ url_for('static', filename='static\img\Compress.svg') }}" alt="Icon">PowerPoint to PDF</a>
-                                <a href="{{ url_for('excel_to_pdf') }}"><img src="{{ url_for('static', filename='static\img\Compress.svg') }}" alt="Icon">Excel to PDF</a>
+                                <a href="{{ url_for('ppt_to_pdf') }}"><img src="{{ url_for('static', filename='img/Compress.svg') }}" alt="Icon">PowerPoint to PDF</a>
+                                <a href="{{ url_for('excel_to_pdf') }}"><img src="{{ url_for('static', filename='img/Compress.svg') }}" alt="Icon">Excel to PDF</a>
                                 <a href="{{ url_for('html_to_pdf') }}"><svg width="168" height="168" viewBox="0 0 168 168" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <rect width="112" height="112" rx="25" fill="#238287"/>
                                     <rect x="168" y="168" width="112" height="112" rx="25" transform="rotate(-180 168 168)" fill="#238287"/>
